[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Dialogs/CharacterCreationDialog.gd" type="Script" id=1]

[node name="CharacterCreationDialog" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -72.0
margin_right = 160.0
margin_bottom = 72.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -72.0
margin_right = 160.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCharactername" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 116.0
margin_bottom = 40.0
text = "Character name"

[node name="LineEditCharactername" type="LineEdit" parent="Panel"]
margin_left = 120.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 40.0

[node name="ButtonCreate" type="Button" parent="Panel"]
margin_left = 16.0
margin_top = 48.0
margin_right = 224.0
margin_bottom = 72.0
text = "Create character"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="Panel"]
margin_left = 232.0
margin_top = 48.0
margin_right = 304.0
margin_bottom = 72.0
text = "Back"

[node name="LabelStatus" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 80.0
margin_right = 304.0
margin_bottom = 128.0
text = "Enter a name for your new character."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/ButtonCreate" to="." method="_on_ButtonCreate_pressed"]
[connection signal="pressed" from="Panel/ButtonBack" to="." method="_on_ButtonBack_pressed"]
